fix whitespace, init icons in hero

--- a/src/styles/base/base.sass
+++ b/src/styles/base/base.sass
@@ -2,15 +2,19 @@ html
   overflow: hidden
   scroll-behavior: smooth
   font-size: 62.5%
+  position: relative
 
-  body
-    padding: 0
-    margin: 12.5rem 0 0 0
-
-  ul
-    list-style: none
-    padding: 0
+  body, #___gatsby, #gatsby-focus-wrapper, main
+    width: 100%
+    height: 100%
     margin: 0
+    padding: 0
+    overflow-x: hidden
 
-  main
-    position: relative
+    ul
+      list-style: none
+      padding: 0
+      margin: 0
+
+    main
+      position: relative
