--- a/src/styles/layout/header.sass
+++ b/src/styles/layout/header.sass
@@ -1,10 +1,14 @@
 header
-  height: $header-height
-  margin-top: -$header-height
   width: 100%
-  position: fixed
+  height: $header-height
   background: transparent
+  position: fixed
+  top: 0
   z-index: 999
+
+  &.active
+    background: $light
+
 
   .header-wrap
     width: 100%
